--- a/views/list.html
+++ b/views/list.html
@@ -11,14 +11,27 @@
   <script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
   <script type="text/javascript" src="/js/jquery.easing-1.3.pack.js"></script>
   <script type="text/javascript" src="/js/bootstrap-alerts.js"></script>
+  <script type="text/javascript" src="/js/jquery.tablesorter.min.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     $("a.fancybox").fancybox();
+    $(".alert-message").alert('close');
   });
   </script>
 </head>
 <body>
-
+<div class="topbar">
+      <div class="topbar-inner">
+        <div class="container">
+          <span class="brand" href="#">{{ data['title'] }}</span>
+          <ul class="nav secondary-nav">
+            %if data['login'] and data['password']:
+            <li class=""><a href="/logout">Выйти</a></li>
+            %end
+          </ul>
+        </div>
+      </div>
+    </div>
   <div class="container">
     <header>
 		<h1>{{data['title']}}</h1>
@@ -42,31 +55,50 @@
       <p><strong>Неправильный логин!</strong> Пожалуйста, попробуйте еще раз.</p>
     </div>
     %end
-    %if data['login'] and data['password']:
-    <div id="main">
     %if data['toplevel']:
-      <p><a href="/?path={{ data['toplevel'] }}">..</a></p>
+         <p><a href="/?path={{ data['toplevel'] }}">..</a></p>
     %end
-    %for row in data['output']:      
-      <p>
+    %if data['login'] and data['password']:
+    <table class="zebra-striped" id="main">
+    <thead>
+          <tr>
+            <th>Название</th>
+            <th>Действия</th>
+            <th>Размер</th>
+            <th>Дата изменения</th>
+          </tr>
+    </thead>
+    %for row in data['output']:   
+      <tr><td>
       <img src="/img/icons/{{ row["type"] }}.png" />
       %if row["type"] == 'folder':
       <a href="/?path={{ row['path'] }}">{{ row['name'] }}</a>
       %else:
       <a href="/download?path={{ row['path'] }}">{{ row['name'] }}</a>
+      %end
+      </td>
+      <td>
       %if row["type"] == 'imagen':
       <a href="/img/view?path={{ row['path'] }}" class="fancybox"><img src="/img/icons/image_view.png" /></a>
       %end
+      </td><td>
+      %if row["type"] != 'folder':
+      {{ row['size'] }}
       %end
-      </p>
+      </td><td>{{ row['date'] }}</td>
+      </tr>
     %end
-    </div>
+    </table>
     %else:
-    <div>
+    <div class="clearfix">
       <form action="/login" method="POST">
-        Логин: <br /><input name="login" type="text" /><br />
-        Пароль: <br /><input name="password" type="password" /><br />
-        <input type="submit" value="Войти!">
+      <div class="clearfix">
+        <label>Логин:</label><div class="input"><input name="login" type="text" /></div>
+      </div><div class="clearfix">
+        <label>Пароль:</label><div class="input"><input name="password" type="password" /></div>
+      </div><div class="clearfix">
+        <div class="input"><input type="submit" value="Войти!"></div>
+      </div>
       </from>
     </div>
     %end
