--- a/views/list.html
+++ b/views/list.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
   <script type="text/javascript" src="/js/jquery.easing-1.3.pack.js"></script>
   <script type="text/javascript" src="/js/bootstrap-alerts.js"></script>
-  <script type="text/javascript" src="/js/jquery.tablesorter.min.js"></script>
+  <script type="text/javascript" src="/js/bootstrap-modal.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     $("a.fancybox").fancybox();
@@ -62,10 +62,11 @@
     <table class="zebra-striped" id="main">
     <thead>
           <tr>
-            <th>Название</th>
+            <th style="width: 300px;">Название</th>
             <th>Действия</th>
             <th>Размер</th>
             <th>Дата изменения</th>
+            <th>Описание</th>
           </tr>
     </thead>
     %for row in data['output']:   
@@ -81,11 +82,49 @@
       %if row["type"] == 'imagen':
       <a href="/img/view?path={{ row['path'] }}" class="fancybox"><img src="/img/icons/image_view.png" /></a>
       %end
+      %if data['is_admin']:
+      <button data-controls-modal="modal-from-{{ row['counter'] }}" data-backdrop="true" data-keyboard="true" class="btn primary">Управление</button>
+      <div id="modal-from-{{ row['counter'] }}" class="modal hide fade" style="display: none; ">
+            <div class="modal-header">
+              <a href="#" class="close">×</a>
+              <h3>Управление файлом {{ row['name'] }}</h3>
+            </div>
+            <div class="modal-body">
+
+              <p>      
+                <h4>Превью</h4>
+                <form action="/upload" method="POST" enctype="multipart/form-data">
+                <input type="file" name="file">
+                <input type="hidden" name="path" value="{{ row['path'] }}">
+                <input type="hidden" name="name" value="{{ row['name'] }}">
+                <input type="submit" class="btn" value="Загрузить превью"> <a href="/delete?path={{ row['preview'] }}&return={{ data['path'] }}" class="btn danger">Удалить превью</a>
+                <span class="help-block">Загружайте только JPEG изображения!</span>
+                </form>
+              </p>
+              <p>
+                <h4>Описание</h4>
+                <form action="/description" method="POST">
+                  <textarea class="xxlarge" name="description" rows="3">{{ row['description'] }}</textarea>
+                  <span class="help-block">
+                    Описание будет видно всем пользователям
+                  </span>
+                <input type="hidden" name="dir" value="{{ data['path'] }}">
+                <input type="hidden" name="name" value="{{ row['name'] }}">
+                <input type="submit" class="btn" value="Сохранить описание">
+                </form>
+              </p>
+            </div>
+      </div>
+      %if row["preview"]:
+      <a href="/thumb?path={{ row['preview'] }}" class="fancybox"><img src="/img/icons/image_view.png" /></a>
+      %end
+      %end
       </td><td>
       %if row["type"] != 'folder':
       {{ row['size'] }}
       %end
       </td><td>{{ row['date'] }}</td>
+      <td>{{ row['description'] }}</td>
       </tr>
     %end
     </table>
